[tool.poetry]
name = "pyshortener"
version = "0.1.0"
description = "URL Shortener written in python and fastapi."
authors = ["Pawel Borkar <pawel@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
validators = "^0.22.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
